--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "commands": [{
-            "command": "extension.sayHello",
-            "title": "Hello World"
-        }]
+        "commands": [
+            {
+                "command": "extension.sayHello",
+                "title": "Hello World"
+            }]
     },
     "scripts": {
         "vscode:prepublish": "tsc -p ./",
