--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
       }
     ],
     "keybindings": [
-      { "key": "ctrl+d", "command": "extension.openMainMenu"}
+      {
+        "key": "ctrl+d",
+        "command": "extension.openMainMenu"
+      }
     ]
   },
   "scripts": {
@@ -39,6 +42,7 @@
     "@types/mocha": "^2.2.32"
   },
   "dependencies": {
+    "ansi-to-html": "^0.6.0",
     "copy-paste": "^1.3.0",
     "opn": "^4.0.2"
   }
