--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "repository": "https://github.com/zikalino/vsc-docker",
     "icon": "vsc-docker-icon.png",
     "engines": {
-        "vscode": "^1.10.0"
+        "vscode": "^1.13.0"
     },
     "categories": [
         "Other"
@@ -17,6 +17,30 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
+        "views": {
+            "explorer": [
+                {
+                    "id": "dockerContainers",
+                    "name": "Docker Containers"
+                },
+                {
+                    "id": "dockerImages",
+                    "name": "Docker Images"
+                },
+                {
+                    "id": "azureRegistries",
+                    "name": "Azure Container Registry"
+                },
+                {
+                    "id": "DockerHubTreeView",
+                    "name": "Docker Hub"
+                },
+                {
+                    "id": "suggestedDockerImages",
+                    "name": "Suggested Docker Hub Images"
+                }
+            ]
+        },
         "commands": [
             {
                 "command": "extension.openMainMenu",
@@ -56,6 +80,8 @@
         "@types/mocha": "^2.2.32"
     },
     "dependencies": {
+        "applicationinsights": "^0.20.1",
+        "axios": "^0.16.2",
         "ansi-to-html": "^0.6.0",
         "copy-paste": "^1.3.0",
         "opn": "^4.0.2"
