--- a/package.json
+++ b/package.json
@@ -57,8 +57,276 @@
             {
                 "command": "extension.searchImages",
                 "title": "DockerRunner: Search Images"
+            },
+            {
+                "command": "docker-explorer.refreshDockerContainers",
+                "title": "Refresh",
+                "icon": {
+                    "light": "resources/light/refresh.svg",
+                    "dark": "resources/dark/refresh.svg"
+                }
+            },
+            {
+                "command": "docker-explorer.refreshDockerImages",
+                "title": "Refresh",
+                "icon": {
+                    "light": "resources/light/refresh.svg",
+                    "dark": "resources/dark/refresh.svg"
+                }
+            },
+            {
+                "command": "docker-explorer.refreshAzureRegistries",
+                "title": "Refresh",
+                "icon": {
+                    "light": "resources/light/refresh.svg",
+                    "dark": "resources/dark/refresh.svg"
+                }
+            },
+            {
+                "command": "docker-explorer.refreshDockerHub",
+                "title": "Refresh",
+                "icon": {
+                    "light": "resources/light/refresh.svg",
+                    "dark": "resources/dark/refresh.svg"
+                }
+            },
+            {
+                "command": "docker-explorer.startContainer",
+                "title": "Start"
+            },
+            {
+                "command": "docker-explorer.stopContainer",
+                "title": "Stop"
+            },
+            {
+                "command": "docker-explorer.restartContainer",
+                "title": "Restart"
+            },
+            {
+                "command": "docker-explorer.showContainerStatistics",
+                "title": "Statistics"
+            },
+            {
+                "command": "docker-explorer.showContainerLogs",
+                "title": "Logs"
+            },
+            {
+                "command": "docker-explorer.removeContainer",
+                "title": "Remove"
+            },
+            {
+                "command": "docker-explorer.searchContainer",
+                "title": "Search"
+            },
+            {
+                "command": "docker-explorer.executeCommandInContainer",
+                "title": "Execute"
+            },
+            {
+                "command": "docker-explorer.executeInBashInContainer",
+                "title": "Execute In Bash"
+            },
+            {
+                "command": "docker-explorer.runFromImage",
+                "title": "Run"
+            },
+            {
+                "command": "docker-explorer.removeImage",
+                "title": "Remove"
+            },
+            {
+                "command": "docker-explorer.pushImage",
+                "title": "Push to ACR"
+            },
+            {
+                "command": "docker-explorer.pullImage",
+                "title": "Pull"
+            },
+            {
+                "command": "docker-explorer.deployToAzure",
+                "title": "Deploy"
+            },
+            {
+                "command": "docker-explorer.loginAzureCli",
+                "title": "Login",
+                "icon": {
+                    "light": "resources/light/login.png",
+                    "dark": "resources/dark/login.png"
+                }
+            },
+            {
+                "command": "docker-explorer.logoutAzureCli",
+                "title": "Logout",
+                "icon": {
+                    "light": "resources/light/logout.png",
+                    "dark": "resources/dark/logout.png"
+                }
+            },
+            {
+                "command": "docker-explorer.loginDockerHub",
+                "title": "Login",
+                "icon": {
+                    "light": "resources/light/login.png",
+                    "dark": "resources/dark/login.png"
+                }
+            },
+            {
+                "command": "docker-explorer.logoutDockerHub",
+                "title": "Logout",
+                "icon": {
+                    "light": "resources/light/logout.png",
+                    "dark": "resources/dark/logout.png"
+                }
+            },
+            {
+                "command": "docker-explorer.pullFromDockerHub",
+                "title": "Pull"
+            },
+            {
+                "command": "docker-explorer.pullLatestFromDockerHub",
+                "title": "Pull latest"
+            },
+            {
+                "command": "docker-explorer.openDockerHubPage",
+                "title": "Open Docker Hub page"
             }
         ],
+        "menus": {
+            "view/title": [
+                {
+                    "command": "docker-explorer.refreshDockerContainers",
+                    "when": "view == dockerContainers",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.searchContainer",
+                    "when": "view == dockerContainers"
+                },
+                {
+                    "command": "docker-explorer.refreshDockerHub",
+                    "when": "view == DockerHubTreeView",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.refreshDockerImages",
+                    "when": "view == dockerImages",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.refreshAzureRegistries",
+                    "when": "view == azureRegistries",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.loginAzureCli",
+                    "when": "view == azureRegistries",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.logoutAzureCli",
+                    "when": "view == azureRegistries",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.loginDockerHub",
+                    "when": "view == DockerHubTreeView",
+                    "group": "navigation"
+                },
+                {
+                    "command": "docker-explorer.logoutDockerHub",
+                    "when": "view == DockerHubTreeView",
+                    "group": "navigation"
+                }
+            ],
+            "view/item/context": [
+                {
+                    "command": "docker-explorer.executeCommandInContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@0"
+                },
+                {
+                    "command": "docker-explorer.executeInBashInContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@1"
+                },
+                {
+                    "command": "docker-explorer.startContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@2"
+                },
+                {
+                    "command": "docker-explorer.stopContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@3"
+                },
+                {
+                    "command": "docker-explorer.restartContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@4"
+                },
+                {
+                    "command": "docker-explorer.showContainerStatistics",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@5"
+                },
+                {
+                    "command": "docker-explorer.showContainerLogs",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@6"
+                },
+                {
+                    "command": "docker-explorer.removeContainer",
+                    "when": "view == dockerContainers",
+                    "group": "docker-explorer@7"
+                },
+                {
+                    "command": "docker-explorer.runFromImage",
+                    "when": "view == dockerImages",
+                    "group": "docker-explorer@0"
+                },
+                {
+                    "command": "docker-explorer.removeImage",
+                    "when": "view == dockerImages",
+                    "group": "docker-explorer@1"
+                },
+                {
+                    "command": "docker-explorer.pushImage",
+                    "when": "view == dockerImages",
+                    "group": "docker-explorer@2"
+                },
+                {
+                    "command": "docker-explorer.pullImage",
+                    "when": "view == azureRegistries && viewItem == tag",
+                    "group": "docker-explorer@0"
+                },
+                {
+                    "command": "docker-explorer.deployToAzure",
+                    "when": "view == azureRegistries && viewItem == tag",
+                    "group": "docker-explorer@1"
+                },
+                {
+                    "command": "docker-explorer.pullFromDockerHub",
+                    "when": "view == DockerHubTreeView && viewItem == image",
+                    "group": "docker-explorer@0"
+                },
+                {
+                    "command": "docker-explorer.openDockerHubPage",
+                    "when": "view == DockerHubTreeView && viewItem == image",
+                    "group": "docker-explorer@1"
+                },
+                {
+                    "command": "docker-explorer.pullLatestFromDockerHub",
+                    "when": "view == suggestedDockerImages",
+                    "group": "docker-explorer@0"
+                },
+                {
+                    "command": "docker-explorer.openDockerHubPage",
+                    "when": "view == suggestedDockerImages",
+                    "group": "docker-explorer@1"
+                }
+            ]
+        },
+        
         "keybindings": [
             {
                 "key": "alt+ctrl+d",
