--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vsc-docker",
     "displayName": "Docker Runner",
     "description": "Docker Integration for VSC",
-    "version": "0.15.0",
+    "version": "0.16.0",
     "publisher": "Zim",
     "repository": "https://github.com/zikalino/vsc-docker",
     "icon": "vsc-docker-icon.png",
@@ -105,6 +105,7 @@
         "axios": "^0.16.2",
         "ansi-to-html": "^0.6.0",
         "copy-paste": "^1.3.0",
-        "opn": "^4.0.2"
+        "opn": "^4.0.2",
+        "microsoft-adaptivecards": "^0.5.4"
     }
 }
