--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "onCommand:extension.openMainMenu",
         "onCommand:extension.showLocalImages",
         "onCommand:extension.showLocalContainers",
-        "onCommand:extension.searchImages"
+        "onCommand:extension.searchImages",
+        "onCommand:extension.testStuff"
     ],
     "main": "./out/src/extension",
     "contributes": {
@@ -54,6 +55,10 @@
             {
                 "key": "alt+ctrl+s",
                 "command": "extension.searchImages"
+            },
+            {
+                "key": "alt+ctrl+t",
+                "command": "extension.testStuff"
             }
         ]
     },
