fixed problem with removing containers for image

--- a/config.json
+++ b/config.json
@@ -14,6 +14,9 @@
   "images": {
     "dockiot/moomookfi": {
       "dockerfile": "c:\\dev\\_ansible\\docker-ansible"
+    },
+    "dockiot/ansible": {
+      "dockerfile": "c:\\dev\\_ansible\\docker-ansible"
     }
   }
 }
